--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,10 +22,18 @@ jobs:
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      run: 
-        echo "iniciando login"
+      run: |
         docker login -u $DOCKER_USER -P $DOCKER_PASSWORD
-        echo "Fin del login"
+
+    - name: Build Docker Image
+      run: |
+        docker build -t frangambino/docker-graphql:0.0.2 .
+
+    - name: Push Docker Image
+      run:
+        docker push frangambino/docker-graphql:0.0.2 .
+        
+      
 
 
       
